# test

./: CLAUDE.md  example.py  fruits.txt  pyproject.toml  snake_game.py
docs/agents/: domain.md
